# DMC3-Crimson

./: .gitignore  CMakeLists.txt  ConfigFunctions.h  GUIBase.ixx  GlobalBase.ixx  HooksBase.ixx  LICENSE  LICENSE.txt  README.md  VS2022x64.bat  ddmk.js  dinput8.cpp
Core/: Core.ixx
Mary/: Actor.ixx  Config.ixx  Exp.ixx  ExtraSound.ixx  GUI.ixx  Graphics.ixx  HUD.ixx  Input.ixx  Mary.cpp  Speed.ixx  Training.ixx  Vars.ixx
Research/AdditionalCheatTables/: 3head_jc_thing.CT  CStageHangs(Broken).CT  CStageHangs.CT  ChargeControls.CT  CrazyCombo hold 3.CT  DTMustStyleArmor.CT  Disable Drive Hold.CT  DisableEffects.CT  EnableGeryonGigapedeJCHitbox.CT  GroundTrick.CT  HDC - SessionData and MissionData.CT  HoldCCTesting.CT  Increased JC Sphere.CT  IncreasedEnemyJuggleTime.CT  NoHeightRestriction.CT  NoSoulEaterInvis.CT  Remove Enemy Slotting.CT  aaasddddddd.CT  airslashfix.CT  airtatsumaki inertiafix.CT  bullet stop.CT  cameraroll.CT  coopteleportresearch.CT  crazycombohold.CT  crazycombohold2.CT  difficulty.ct  effects.CT  enable taunt action in air.CT  fasterturnrate.CT  followupcamspeed.CT  frameofanimation.CT  getenemycurrentHP.CT  getenemymaxHP.ct  gravityeditberthrage.CT  guard gravity edit 2.CT  guard gravity edit 3.CT  guard gravity edit.CT  holdCCtimingsberthrage.CT  hpbaranimationfix.CT  hpbarseparator.CT  (+21 more)
Research/MainCheatTable/: ExceptionAutoSave_dmc3.CT  dmc3.CT
Research/Misc/: Camera Collision Research.txt  Crazy Combos.txt  Effects Found on Player (for CreateEffect).txt  EnemyAITargetPositionReversing.txt  cutscene1trace.cetrace  cutscene2trace.cetrace
Scripts/: dmc3_create_data.js
src/: Actor.cpp  Actor.hpp  ActorBase.cpp  ActorBase.hpp  ActorRelocations.cpp  ActorRelocations.hpp  Arcade.cpp  Arcade.hpp  BossRush.cpp  BossRush.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.ixx  Config.cpp  Config.hpp  CrashHandler.cpp  CrashHandler.hpp  Crimson.cpp  CrimsonBetterArkham2.cpp  CrimsonBetterArkham2.hpp  CrimsonCameraController.cpp  CrimsonCameraController.hpp  CrimsonConfig.cpp  CrimsonConfig.hpp  CrimsonConfigGameplay.cpp  CrimsonConfigGameplay.hpp  CrimsonConfigGameplayMask.cpp  CrimsonConfigGameplayMask.hpp  CrimsonConfigHandling.h  CrimsonDetours.cpp  CrimsonDetours.hpp  CrimsonEnemyAITarget.cpp  CrimsonEnemyAITarget.hpp  CrimsonFX.cpp  CrimsonFX.hpp  CrimsonFileHandling.cpp  CrimsonFileHandling.hpp  CrimsonGUI.cpp  CrimsonGUI.hpp  (+114 more)
src/Core/: Core.cpp  Core.hpp  Core.ixx  Core_ImGui.cpp  Core_ImGui.hpp  DI8.ixx  DataTypes.hpp  DataTypes.ixx  DebugSwitch.hpp  GUI.cpp  GUI.hpp  GUI.ixx  ImGui.ixx  Input.cpp  Input.hpp  Input.ixx  JSON.h  Macros.h  RapidJSON.h
src/Fonts/: Benguiat.hpp  Messenger.hpp  RedOrbRusso.hpp  RedOrbRussoBackdrop.hpp  RobotoMedium.hpp  RussoOneRegular.hpp
src/Global/: ConfigFunctions.h  GUIBase.cpp  GUIBase.hpp  GUIBase.ixx  GlobalBase.cpp  GlobalBase.hpp  GlobalBase.ixx  HooksBase.cpp  HooksBase.hpp  HooksBase.ixx
src/Module Templates/: Actor.ixx  ActorBase.ixx  ActorRelocations.ixx  Arcade.ixx  BossRush.ixx  Config.ixx  Event.ixx  Exp.ixx  GUI.ixx  Global.ixx  HUD.ixx  Scene.ixx  Sound.ixx  SoundRelocations.ixx  Vars.ixx
src/UI/: BatchedSprites.cpp  BatchedSprites.hpp  EmbeddedImages.hpp  GenericAnimation.cpp  GenericAnimation.hpp  GraphicsBase.cpp  GraphicsBase.hpp  SingleSprite.cpp  SingleSprite.hpp  Sprite.cpp  Sprite.hpp  Texture2DArrayD3D11.cpp  Texture2DArrayD3D11.hpp  Texture2DD3D11.cpp  Texture2DD3D11.hpp  UI.hpp  WeaponWheel.cpp  WeaponWheel.hpp
src/Utility/: Address.cpp  Address.hpp  Detour.cpp  Detour.hpp
src/masm/: AddToMirageGauge.asm  ArtemisInstantFullCharge.asm  CameraHittingWall.asm  CameraSensitivity.asm  CerbDamageFix.asm  CommonMacros.inc  CreateEffect.asm  CustomCameraPositioning.asm  DMC4LockOnDirection.asm  DTMustStyleArmor.asm  DisableDriveHoldAsm.asm  DisableStaggerRoyalguard.asm  EnableAirTauntAsm.asm  EnemyAITarget.asm  EnsureAirRisingDragonLaunch.asm  FasterTurnRate.asm  FixBallsHangHitSpeed.asm  FixCrashArkhamPt2Doppel.asm  FixCrashArkhamPt2Grab.asm  FixCrashCerberus.asm  FixCrashM5.asm  FixCrashVergilM3.asm  FixLockOnDirection.asm  FixSecretMissionTimerFPS.asm  FreeformSoftLockHelper.asm  GetRotationTowardsEnemy.asm  GreenOrbsMPRegen.asm  GuardBreakToNormalBlock.asm  GuardGravity.asm  HideStyleRankHUD.asm  HoldToCrazyComboAsm.asm  HoldToShoot.asm  HudHPSeparation.asm  HudStyleBarPosAsm.asm  InputRemapsAsm.asm  MultiplayerCameraPositioning.asm  PlaytimeOnTick.asm  PortalsHideAndMute.asm  RerouteRedOrbsCounterAlpha.asm  SampleMod.asm  (+8 more)
